examples/test/testpolicy8214.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8214
  namespace: namespace265
spec:
  podSelector:
    matchLabels:
      key6: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value25
          key9: value40
          key28: value12
      podSelector:
        matchLabels:
          key43: value26
          key38: value11
